Реализация базы данных, сохранение в базе, удаление из базы. Удалена старая реализация отображения данных.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="priority_2">2</string>
     <string name="priority_3">3</string>
     <string name="btn_save_note">Добавить заметку</string>
+    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
     <string-array name="days_of_week">
         <item>понедельник</item>
         <item>вторник</item>
